fix spacing for name on about page

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,3 +4,8 @@
 .navbar-inverse .navbar-brand {
   color: #fff;
 }
+
+/* about */
+.about-name {
+  margin-top: 0;
+}
